fix: add vite-ping subprotocol to Vite websocket proxy (#20578) (#20958)
Fixes #20574

Co-authored-by: Marco Collovati <marco@vaadin.com>